Made resume corrections

--- a/files/resume/current_cv.tex
+++ b/files/resume/current_cv.tex
@@ -41,7 +41,7 @@
 %----------------------------------------------------------------------------------------
 \begin{rSection}{Education}
 \vspace*{0.1in}
-{\bf PSG College of Technology, Coimbatore} \hfill {July '16 - Present} \\ {MSc Data Science} \\
+{\bf PSG College of Technology, Coimbatore} \hfill {July '16 - Present} \\ {\emph{MSc Data Science} (Integrated  five year program)} \\
 CGPA (upto $8^{th}$ semester): 9.02/10
 \end{rSection}
 %----------------------------------------------------------------------------------------
@@ -49,11 +49,11 @@ CGPA (upto $8^{th}$ semester): 9.02/10
 %----------------------------------------------------------------------------------------
 \begin{rSection}{Research Experience}
 \vspace*{0.1in}
-{\bf \href{https://arunpalaniappan.github.io/2020-10/FCI.pdf}{Data Driven Analysis of FCI’s Operations and Recommendations}} { \hfill May `20 - Ongoing}\\
+{\bf \href{https://arunpalaniappan.github.io/files/FCI.pdf}{Data Driven Analysis of FCI’s Operations and Recommendations}} { \hfill May `20 - Ongoing}\\
 \textit{Working paper with Shamshu Dharwez, Nehal Muthu}
 \begin{itemize}
 \item We collected available open data, studied operations of Food Corporation of India and found gaps in allotment and offtake of Indian states.
-\item We found factors which influence states proposals, efficient utilization of foodgrains and suggested policy recommendations.
+\item We found factors which influence states proposals, efficient utilization of foodgrains, challenges in providing food security under the current system and suggested policy recommendations.
 \end{itemize}
 
 {\bf TCS Research} { \hfill May `19 - October `19}\\
@@ -68,7 +68,7 @@ CGPA (upto $8^{th}$ semester): 9.02/10
 { \bf \href{https://github.com/arunpalaniappan/Handwriting-Recognition-using-Tensorflow}{Intelligent Character Recognition using Tensorflow}} {\hfill June 2020}
 \begin{itemize}
 \item Used IAM dataset and augmented the dataset with noise added data points to build a robust convolutional netural network to recognize handwritted words.
-\item Used cross-entropy loss function and achieved an accuracy of 54\%.
+\item Used $l_{\infty}$-norm loss and achieved an accuracy of 44\%.
 \end{itemize}
 
 {\bf \href{https://github.com/arunpalaniappan/resume-parser}{Resume Parser}} {\hfill Febraury 2020}
@@ -117,7 +117,7 @@ Machine Learning, Economics, Network Science
 \begin{rSection}{Academic Service}
 \vspace*{0.1in}
 \begin{itemize}[leftmargin=*]
-\item Led the development of \href{https://groups.google.com/g/psg-ml-seminar}{Machine Learning study group} and organized weekly online meetings at PSG College of Technology.
+\item Led the development of \href{https://groups.google.com/g/psg-ml-seminar}{Machine Learning study group} at PSG College of Technology and organized weekly online meetings to discuss machine learning papers and concepts.
 \item Conducted Cricket and Statistics program and \href{https://themango.co/programs/excel-with-sports/}{Excel for Sports} at Mango Education for kids aged between 11 - 15.
 \end{itemize}
 \end{rSection}
@@ -125,11 +125,11 @@ Machine Learning, Economics, Network Science
 \begin{rSection}{Extracurriculars and Achievements}
 \vspace*{0.1in}
 \begin{itemize}[leftmargin=*]
-\item Currently participating in weekly meetings of \href{https://sites.google.com/view/rltheoryseminars/next-seminar}{RL Theory Seminar} organized by Gergely Neu, Ciara Pike-Burke, Csaba Szepesvari.
+\item Participated virtually in \href{https://simons.berkeley.edu/workshops/rl-2020-bc}{Theory of Reinforcement Learning Boot Camp} organized by Simons Institute for Theory of Computing.
 \item Participated in ACM Winter School on Cybersecurity, 2019 conducted at NISER Bhubaneshwar.
 \item Wrote my study notes on multi-arm bandits as blogs at \href{https://arunpalaniappan.github.io/}{https://arunpalaniappan.github.io/}
-\item Secured fifth rank in maths olympiad organized by Department of Mathematics, PSG College of Technology.
-\item Obtained finisher medal in Amma marathon conducted by government of Tamil Nadu for cancer awareness at Coimbatore.
+\item Secured Fifth rank in maths olympiad organized by Department of Mathematics, PSG College of Technology.
+\item Obtained Finisher medal in Amma marathon conducted by government of Tamil Nadu for cancer awareness at Coimbatore.
 \end{itemize}
 \end{rSection}
 
