Added active works, blog

--- a/files/resume/current_cv.tex
+++ b/files/resume/current_cv.tex
@@ -68,7 +68,7 @@ CGPA (upto $8^{th}$ semester): 9.02/10
 { \bf \href{https://github.com/arunpalaniappan/Handwriting-Recognition-using-Tensorflow}{Intelligent Character Recognition using Tensorflow}} {\hfill June 2020}
 \begin{itemize}
 \item Used IAM dataset and augmented the dataset with noise added data points to build a robust convolutional netural network to recognize handwritted words.
-\item Used $l_{\infty}$-norm loss and achieved an accuracy of 44\%.
+\item Performed gradient clipping, used $l_{\infty}$-norm loss and achieved an accuracy of 44\%.
 \end{itemize}
 
 {\bf \href{https://github.com/arunpalaniappan/resume-parser}{Resume Parser}} {\hfill Febraury 2020}
@@ -126,7 +126,7 @@ Machine Learning, Economics, Network Science
 \vspace*{0.1in}
 \begin{itemize}[leftmargin=*]
 \item Participated virtually in \href{https://simons.berkeley.edu/workshops/rl-2020-bc}{Theory of Reinforcement Learning Boot Camp} organized by Simons Institute for Theory of Computing.
-\item Participated in ACM Winter School on Cybersecurity, 2019 conducted at NISER Bhubaneshwar.
+\item A member of Coimbatore Toastmasters Club between 2017-2019 and served as Secretary of the club between July 2018-Dec 2018.
 \item Wrote my study notes on multi-arm bandits as blogs at \href{https://arunpalaniappan.github.io/}{https://arunpalaniappan.github.io/}
 \item Secured Fifth rank in maths olympiad organized by Department of Mathematics, PSG College of Technology.
 \item Obtained Finisher medal in Amma marathon conducted by government of Tamil Nadu for cancer awareness at Coimbatore.
