--- a/files/resume/current_cv.tex
+++ b/files/resume/current_cv.tex
@@ -49,7 +49,7 @@ CGPA (upto $8^{th}$ semester): 9.02/10
 %----------------------------------------------------------------------------------------
 \begin{rSection}{Research Experience}
 \vspace*{0.1in}
-{\bf \href{https://arunpalaniappan.github.io/files/FCI.pdf}{Data Driven Analysis of FCI’s Operations and Recommendations}} { \hfill May `20 - Ongoing}\\
+{\bf \href{https://arunpalaniappan.github.io/files/FCI.pdf}{Data Driven Analysis of FCI’s Operations and Recommendations}} { \hfill May `20 - October `20}\\
 \textit{Working paper with Shamshu Dharwez, Nehal Muthu}
 \begin{itemize}
 \item We collected available open data, studied operations of Food Corporation of India and found gaps in allotment and offtake of Indian states.
