--- a/files/resume/current_cv.tex
+++ b/files/resume/current_cv.tex
@@ -1,25 +1,4 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Medium Length Professional CV
-% LaTeX Template
-% Version 2.0 (8/5/13)
-%
-% This template has been downloaded from:
-% http://www.LaTeXTemplates.com
-%
-% Original author:
-% Trey Hunner (http://www.treyhunner.com/)
-%
-% Important note:
-% This template requires the resume.cls file to be in the same directory as the
-% .tex file. The resume.cls file provides the resume style used for structuring the
-% document.
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%----------------------------------------------------------------------------------------
-%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
-%----------------------------------------------------------------------------------------
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass{resume} % Use the custom resume.cls style
 \usepackage{hyperref, textcomp, lipsum}
 \usepackage{enumitem}
@@ -49,6 +28,12 @@ CGPA (upto $8^{th}$ semester): 9.02/10
 %----------------------------------------------------------------------------------------
 \begin{rSection}{Research Experience}
 \vspace*{0.1in}
+{\bf Indian Institute of Technology Madras} { \hfill Jan `21 - Present} \\
+\textit{Research Intern under Kamakoti Veezhinathan}{\hfill Chennai}
+\begin{itemize}
+	\item Exploring deep learning based methods for detecting malware from network traffic.
+\end{itemize}
+
 {\bf \href{https://arunpalaniappan.github.io/files/FCI.pdf}{Data Driven Analysis of FCI’s Operations and Recommendations}} { \hfill May `20 - October `20}\\
 \textit{Working paper with Shamshu Dharwez, Nehal Muthu}
 \begin{itemize}
@@ -59,10 +44,11 @@ CGPA (upto $8^{th}$ semester): 9.02/10
 {\bf TCS Research} { \hfill May `19 - October `19}\\
 \textit{Research Intern under \href{https://www.linkedin.com/in/sharadha-ramanan-43bb4946/}{Sharadha Ramanan}}{\hfill Chennai}
 \begin{itemize}
-\item Studied dynamic pricing of interdependent and perishable product using reinforcement learning techniques.
-\item Proposed a Q-learning model which achieved a yield of 16\% higher than passive pricing techniques in simulated environment.
+	\item Studied dynamic pricing of interdependent and perishable products using reinforcement learning techniques.
+	\item Proposed a Q-learning model which achieved a yield of 16\% higher than passive pricing techniques in simulated environment.
 \end{itemize}
 \end{rSection}
+
 \begin{rSection}{Key Projects}
 \vspace*{0.1in}
 { \bf \href{https://github.com/arunpalaniappan/Handwriting-Recognition-using-Tensorflow}{Intelligent Character Recognition using Tensorflow}} {\hfill June 2020}
@@ -90,27 +76,26 @@ CGPA (upto $8^{th}$ semester): 9.02/10
 
 \end{rSection}
 
-\pagebreak
+%\pagebreak
 
 \begin{rSection}{Relevant Courses}
 \begin{itemize}[leftmargin=*]
 \itemsep -0.5em 
-\item \textbf{Computer Science} - Data Structures, Design and Analysis of Algorithms, Database Systems, Data Mining, Supervised and Unsupervised Learning, Reinforcement Learning.
-\item \textbf{Mathematics} - Calculus and its Applications, Theory of Probability, Applied Statistics, Graph Theory, Stochastic Models, Predictive Analytics, Linear Algebra, Network Science\footnotemark[1], Game Theory\footnotemark[1]
-\footnotetext[1]{Courses currently undertaking}
+\item \textbf{Computer Science} - Data Structures, Design and Analysis of Algorithms, Database Systems, Computer Networks, Data Mining, Supervised and Unsupervised Learning, Reinforcement Learning.
+\item \textbf{Mathematics} - Calculus and its Applications, Theory of Probability, Applied Statistics, Graph Theory, Stochastic Models, Predictive Analytics, Linear Algebra, Operations Research, Network Science, Game Theory.
 \end{itemize}
 \end{rSection}
 
 \begin{rSection}{Academic Interests}
-Machine Learning, Economics, Network Science
+Machine Learning, Security, Economics
 \end{rSection}
 
 \begin{rSection}{Technical Skills}
 \begin{itemize}[leftmargin=*]
 \itemsep -0.5em 
-\item \textbf{Strong} - Python, Rstudio
+\item \textbf{Strong} - Python, Rstudio, MongoDB
 \item \textbf{Familiar} - MATLAB, C/C++, MySQL
-\item \textbf{Tools} - Pytorch, Git, \LaTeX
+\item \textbf{Tools} - Pytorch, Tensorflow, OpenCV, Git, \LaTeX
 \end{itemize}
 \end{rSection}
 
@@ -125,10 +110,10 @@ Machine Learning, Economics, Network Science
 \begin{rSection}{Extracurriculars and Achievements}
 \vspace*{0.1in}
 \begin{itemize}[leftmargin=*]
+\item Selected for \href{http://www.niser.ac.in/~smishra/event/acmws2019/}{ACM Winter School on Cybersecurity}, 2019 organized by NISER Bhubaneshwar.
 \item Participated virtually in \href{https://simons.berkeley.edu/workshops/rl-2020-bc}{Theory of Reinforcement Learning Boot Camp} organized by Simons Institute for Theory of Computing.
+\item Secured Fifth rank (99\textsuperscript{th} percentile) in maths olympiad organized by Department of Mathematics, PSG College of Technology.
 \item A member of Coimbatore Toastmasters Club between 2017-2019 and served as Secretary of the club between July 2018-Dec 2018.
-\item Wrote my study notes on multi-arm bandits as blogs at \href{https://arunpalaniappan.github.io/}{https://arunpalaniappan.github.io/}
-\item Secured Fifth rank in maths olympiad organized by Department of Mathematics, PSG College of Technology.
 \item Obtained Finisher medal in Amma marathon conducted by government of Tamil Nadu for cancer awareness at Coimbatore.
 \end{itemize}
 \end{rSection}
@@ -139,7 +124,5 @@ Machine Learning, Economics, Network Science
 \item \href{https://www.linkedin.com/in/sharadha-ramanan-43bb4946/}{Dr. Sharadha Ramanan}, Principal Scientist, TCS Research, Chennai. Contact:\href{mailto:sharadha.ramanan@tcs.com}{sharadha.ramanan@tcs.com}
 \end{itemize}
 \end{rSection}
-
-%----------------------------------------------------------------------------------------
 
 \end{document}
